# worldcup2026sweepstake

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
data/: World_Cup_sweepstake.xlsx  sample_results.json
scripts/: generate_data.py  generate_sample.py  post-merge.sh
static/: index.html
static/css/: styles.css
static/js/: app.js
tests/: conftest.py  test_api.py  test_engine.py  test_excel_parity.py  test_feed.py  test_integration.py  test_store.py  test_third_place_allocation.py
wcsweepstake/: __init__.py  core.py  engine.py  feed.py  store.py  third_place_allocation.json  tournament_data.json
